@@ -1,3 +1,9 @@
+2004-02-26  Andrew Haley  <aph@redhat.com>
+
+	PR java/12890:
+	* parse.y (do_resolve_class): Check return value from
+	breakdown_qualified().
+
 2004-02-14  Release Manager
 
 	* GCC 3.3.3 Released.
